tests/derive_props/fail.stderr
error: unexpected end of input, expected expression
  --> $DIR/fail.rs:57:18
   |
57 |         #[prop_or()]
   |                  ^^

error: cannot find attribute `props` in this scope
  --> $DIR/fail.rs:22:11
   |
22 |         #[props(default)]
   |           ^^^^^

error[E0425]: cannot find value `foo` in this scope
  --> $DIR/fail.rs:87:24
   |
87 |         #[prop_or_else(foo)]
   |                        ^^^ not found in this scope
   |
help: possible candidates are found in other modules, you can import them into scope
   |
83 |     use crate::t10::foo;
   |
83 |     use crate::t9::foo;
   |

error[E0277]: the trait bound `t1::Value: std::default::Default` is not satisfied
 --> $DIR/fail.rs:9:21
  |
9 |     #[derive(Clone, Properties)]
  |                     ^^^^^^^^^^ the trait `std::default::Default` is not implemented for `t1::Value`
  |
  = note: required by `std::default::Default::default`

error[E0599]: no method named `build` found for type `t3::PropsBuilder<t3::PropsBuilderStep_missing_required_prop_value>` in the current scope
  --> $DIR/fail.rs:35:26
   |
29 |     #[derive(Clone, Properties)]
   |                     ---------- method `build` not found for this
...
35 |         Props::builder().build();
   |                          ^^^^^ method not found in `t3::PropsBuilder<t3::PropsBuilderStep_missing_required_prop_value>`

error[E0599]: no method named `b` found for type `t4::PropsBuilder<t4::PropsBuilderStep_missing_required_prop_a>` in the current scope
  --> $DIR/fail.rs:48:26
   |
41 |     #[derive(Clone, Properties)]
   |                     ---------- method `b` not found for this
...
48 |         Props::builder().b(1).a(2).build();
   |                          ^ help: there is a method with a similar name: `a`

error[E0308]: match arms have incompatible types
  --> $DIR/fail.rs:67:19
   |
67 |         #[prop_or(123)]
   |                   ^^^
   |                   |
   |                   expected struct `std::string::String`, found integer
   |                   `match` arms have incompatible types
   |                   this is found to be of type `std::string::String`
   |                   help: try using a conversion method: `123.to_string()`
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0618]: expected function, found `{integer}`
  --> $DIR/fail.rs:77:24
   |
77 |         #[prop_or_else(123)]
   |                        ^^^ call expression requires function

error[E0061]: this function takes 1 parameter but 0 parameters were supplied
   --> $DIR/fail.rs:97:24
    |
97  |         #[prop_or_else(foo)]
    |                        ^^^ expected 1 parameter
...
101 |     fn foo(bar: i32) -> String {
    |     -------------------------- defined here

error[E0308]: match arms have incompatible types
   --> $DIR/fail.rs:111:24
    |
111 |         #[prop_or_else(foo)]
    |                        ^^^
    |                        |
    |                        expected struct `std::string::String`, found `i32`
    |                        `match` arms have incompatible types
    |                        this is found to be of type `std::string::String`
    |                        help: try using a conversion method: `foo.to_string()`
    |
    = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
